--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -78,7 +78,8 @@
   --sidebar-ring: oklch(0.708 0 0);
   --spacing: 0.29rem;
   --success:#28A745;
-  
+  --warning:#dda600;
+  --danger:#DC3545;
 }
 
 .dark {
